# jiji-do

./: CLAUDE.md  Cargo.toml  README.md
.githooks/: check-no-dd-refs.sh  commit-msg  pre-commit
.github/workflows/: ci.yml
docs/: design.md
scripts/: setup-hooks.sh
src/: capabilities.rs  cli.rs  completions.rs  error.rs  main.rs  menu.rs  niri.rs  proc.rs  registry.rs  snapshot.rs
src/verbs/: add_workspace_down.rs  add_workspace_up.rs  assign_workspace.rs  bookmark.rs  bookmark_assign_key.rs  bookmark_move.rs  bookmark_remove.rs  bookmark_unassign_key.rs  create_activity.rs  focus_monitor.rs  focus_workspace_previous.rs  list_activities.rs  list_workspaces.rs  mod.rs  move_column_to_monitor.rs  move_window_here.rs  move_window_to_activity.rs  move_window_to_monitor.rs  move_window_to_new_workspace_down.rs  move_window_to_new_workspace_up.rs  move_workspace_to_activity.rs  move_workspace_to_monitor.rs  pick_color.rs  pick_window.rs  power_off_monitors.rs  power_on_monitors.rs  quit.rs  reload_config.rs  remove_activity.rs  rename_activity.rs  rename_workspace.rs  save_activity.rs  stop_cast.rs  switch_activity.rs  switch_activity_previous.rs  switch_workspace.rs  switch_workspace_all.rs  toggle_debug_tint.rs  unset_workspace_name.rs
tests/: cli.rs  shims.rs
